--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -17,7 +17,7 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock
 
 [program:initialize]
-command=/data/initmoloch.sh
+command=/data/initarkime.sh
 startsecs=0
 startretries=0
 autorestart=false
@@ -49,15 +49,15 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:pcap-moloch]
-command=python3 /data/pcap_moloch_processor.py
+[program:pcap-arkime]
+command=python3 /data/pcap_arkime_processor.py
   --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
   --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --start-sleep 10
   --threads %(ENV_ARKIME_ANALYZE_PCAP_THREADS)s
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
-  --moloch /data/moloch/bin/moloch-capture
+  --arkime /data/arkime/bin/arkime-capture
   --autotag "%(ENV_AUTO_TAG)s"
   --managed "%(ENV_MANAGE_PCAP_FILES)s"
 startsecs=15
