--- a/logstash/pipelines/enrichment/18_tags_finalize.conf
+++ b/logstash/pipelines/enrichment/18_tags_finalize.conf
@@ -18,7 +18,7 @@ filter {
     code => "event.set('[tags]', event.get('[tags]').uniq)"
   }
 
-  # count tags (for moloch)
+  # count tags (for arkime)
 
   ruby {
     id => "ruby_enrichment_tagsCnt"
