--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1,5 +1,5 @@
 ########################
-# zeek -> moloch session creation and enrichment
+# zeek -> arkime session creation and enrichment
 #
 # see https://docs.zeek.org/en/stable/script-reference/log-files.html for Zeek logfile documentation
 #
