--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -16,9 +16,9 @@ filter {
   # Risk/severity/priority/whatever will be done *after* enrichment based on normalized fields
   # - event.severity, event.risk_score and event.risk_score_norm
   #
-  # TODO: certain other fields that I'm already normalizing for moloch could maybe be moved out of
+  # TODO: certain other fields that I'm already normalizing for arkime could maybe be moved out of
   # here into enriched_to_ecs in the enrichment pipeline, but that kind of depends on what things
-  # look like when we add more data sources in the future, or if moloch tackles ECS, etc.
+  # look like when we add more data sources in the future, or if arkime tackles ECS, etc.
   #
 
   # for now don't do anything unles an env explicitly enables it
@@ -170,7 +170,7 @@ filter {
       }
     }
 
-    # for event.start/event.end, we'll the moloch firstPacket/lastPacket field as we already did the math
+    # for event.start/event.end, we'll the arkime firstPacket/lastPacket field as we already did the math
     if ([firstPacket]) {                          mutate { id => "mutate_add_field_ecs_event_start"
                                                            add_field => { "[event][start]" => "%{[firstPacket]}" } } }
     if ([lastPacket]) {                           mutate { id => "mutate_add_field_ecs_event_end"
