--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -214,8 +214,8 @@ http {
     }
 
     # Fix cyberchef JS module(s)
-    # https://localhost/moloch/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
-    location ~* ^/moloch/session/.*/(modules/.*\.js) {
+    # https://localhost/arkime/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
+    location ~* ^/arkime/session/.*/(modules/.*\.js) {
       proxy_hide_header Content-Type;
       proxy_set_header Content-Type "application/javascript";
       add_header Content-Type "application/javascript";
