--- a/sensor-iso/interface/sensor_ctl/arkime/config.ini
+++ b/sensor-iso/interface/sensor_ctl/arkime/config.ini
@@ -1,4 +1,4 @@
-# these settings for moloch-capture will be overridden on the command-line (with "-o field=value")
+# these settings for arkime-capture will be overridden on the command-line (with "-o field=value")
 # so you can (for the most part) ignore settings here that seem like dummy settings
 
 [default]
