--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -291,7 +291,7 @@ services:
       << : *process-variables
       << : *common-upload-variables
       << : *arkime-variables
-      ARKIME_VERSION : '2.7.1'
+      ARKIME_VERSION : '3.0.0'
       VIRTUAL_HOST : 'arkime.malcolm.local'
       ES_HOST : 'elasticsearch'
       ES_PORT : 9200
@@ -310,8 +310,8 @@ services:
       - 8081
     volumes:
       - ./pcap:/data/pcap
-      - ./moloch-logs:/data/moloch/logs
-      - ./moloch-raw:/data/moloch/raw
+      - ./arkime-logs:/data/arkime/logs
+      - ./arkime-raw:/data/arkime/raw
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8005/_ns_/nstest.html"]
       interval: 90s
