--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -312,7 +312,7 @@ services:
       << : *process-variables
       << : *common-upload-variables
       << : *arkime-variables
-      ARKIME_VERSION : '2.7.1'
+      ARKIME_VERSION : '3.0.0'
       VIRTUAL_HOST : 'arkime.malcolm.local'
       ES_HOST : 'elasticsearch'
       ES_PORT : 9200
@@ -331,11 +331,11 @@ services:
       - 8081
     volumes:
       - ./pcap:/data/pcap
-      - ./moloch-logs:/data/moloch/logs
-      - ./moloch-raw:/data/moloch/raw
-      - ./moloch/etc/config.ini:/data/moloch/etc/config.ini:ro
-      - ./moloch/etc/user_settings.json:/data/moloch/etc/user_settings.json:ro
-      - ./moloch/wise/source.zeeklogs.js:/data/moloch/wiseService/source.zeeklogs.js:ro
+      - ./arkime-logs:/data/arkime/logs
+      - ./arkime-raw:/data/arkime/raw
+      - ./arkime/etc/config.ini:/data/arkime/etc/config.ini:ro
+      - ./arkime/etc/user_settings.json:/data/arkime/etc/user_settings.json:ro
+      - ./arkime/wise/source.zeeklogs.js:/data/arkime/wiseService/source.zeeklogs.js:ro
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8005/_ns_/nstest.html"]
       interval: 90s
