fix paths missing

--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -17,7 +17,7 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock
 
 [program:initialize]
-command=/data/initarkime.sh
+command=/opt/initarkime.sh
 startsecs=0
 startretries=0
 autorestart=false
@@ -29,7 +29,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:wise]
-command=/data/wise_service.sh
+command=/opt/wise_service.sh
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -39,7 +39,7 @@ stdout_logfile=%(ENV_ARKIMEDIR)s/logs/wise.log
 redirect_stderr=true
 
 [program:viewer]
-command=/data/viewer_service.sh
+command=/opt/viewer_service.sh
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -50,7 +50,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:pcap-arkime]
-command=python3 /data/pcap_arkime_processor.py
+command=python3 /opt/pcap_arkime_processor.py
   --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
   --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --start-sleep 10
