more arkime rename stuff

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -157,8 +157,8 @@ http {
     }
 
     # Kibana -> Arkime shortcut
-    location ~* /idkib2mol/(.*) {
-      rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
+    location ~* /idkib2ark/(.*) {
+      rewrite ^.*/idkib2ark/(.*) /sessions?expression=($1) redirect;
       proxy_pass http://docker-arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
@@ -251,8 +251,8 @@ http {
     }
 
     # Kibana -> Arkime shortcut
-    location ~* /idkib2mol/(.*) {
-      rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
+    location ~* /idkib2ark/(.*) {
+      rewrite ^.*/idkib2ark/(.*) /sessions?expression=($1) redirect;
       proxy_pass http://docker-arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
