--- a/logstash/pipelines/external/99_elastic_output.conf
+++ b/logstash/pipelines/external/99_elastic_output.conf
@@ -7,7 +7,7 @@ output {
     user => "${ES_EXTERNAL_USER:}"
     password => "${ES_EXTERNAL_PASSWORD:}"
     manage_template => false
-    index => "sessions2-%{+YYMMdd}"
+    index => "arkime_sessions3-%{+YYMMdd}"
     document_id => "%{+YYMMdd}-%{zeekLogDocId}"
   }
 }
