--- a/logstash/pipelines/output/99_elastic_output.conf
+++ b/logstash/pipelines/output/99_elastic_output.conf
@@ -3,7 +3,7 @@ output {
     id => "output_elasticsearch_arkime"
     hosts => "${ES_HOSTS:elasticsearch:9200}"
     manage_template => false
-    index => "sessions2-%{+YYMMdd}"
+    index => "arkime_sessions3-%{+YYMMdd}"
     document_id => "%{+YYMMdd}-%{zeekLogDocId}"
   }
 }
