--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -317,12 +317,19 @@ filter {
     # for a custom severity value it will just work. if it's not in their
     # mapping file, it'll return with a nil value and will be removed
     # in ruby_calculate_final_severity_score
+    #
+    # since we're loading the services here, we'll also take care of "services
+    # running on a non-standard port" as well
     if (!([zeek][logType] =~ /^known/)) {
       ruby {
         id => "ruby_add_field_severity_insecure_protocols"
+        init => "
+          require 'yaml'; $servicePortMap = YAML.load(File.read('/etc/service_ports.yaml'))
+        "
         code => "
           if (service = event.get('[zeek][service]')) then
-            found = 0
+            foundInsec = 0
+            foundOddPort = 0
             if !service.kind_of?(Array) then
               newsrv = Array.new
               newsrv.push(service)
@@ -334,15 +341,27 @@ filter {
               newver.push(version)
               version = newver
             end
+            if ($servicePortMap.length > 0) and
+               (dstPort = event.get('[dstPort]')) then
+              service.each do |srv|
+                if (!$servicePortMap[srv].nil?) and
+                   (service.kind_of?($servicePortMap[srv])) and
+                   ($servicePortMap[srv].length > 0) and
+                   (!$servicePortMap[srv].include?(dstPort)) then
+                  foundOddPort += 1
+                  break
+                end
+              end
+            end
             service.each do |srv|
-              if found > 0 then
+              if foundInsec > 0 then
                 break
               end
               if ['ftp', 'tftp', 'telnet', 'rlogin', 'rsh'].include?(srv) then
-                found += 1
+                foundInsec += 1
               elsif !version.nil? then
                 version.each do |ver|
-                  if found > 0 then
+                  if foundInsec > 0 then
                     break
                   end
                   if (srv.eql?('ssh') and (ver.to_f < 2.0)) or
@@ -353,7 +372,7 @@ filter {
                      (srv.eql?('snmp') and (ver.to_f < 3.0)) or
                      (srv.eql?('ldap') and (ver.to_f < 3.0)) or
                      (srv.eql?('tls') and (!(ver.match(/TLS.*v?1\.?[23]/)))) then
-                    found += 1
+                    foundInsec += 1
                   end
                 end
               end
@@ -364,8 +383,11 @@ filter {
               newtags.push(sevtags)
               sevtags = newtags
             end
-            if found > 0 then
+            if foundInsec > 0 then
               sevtags.push('Insecure or outdated protocol')
+            end
+            if foundOddPort > 0 then
+              sevtags.push('Service on non-standard port')
             end
             sevtags.push(*service.map{|x| 'PROTOCOL_' + x.upcase})
             event.set('[event][severity_tags]', sevtags)
@@ -377,7 +399,7 @@ filter {
       id => "ruby_calculate_final_severity_score"
       # pre-load severity score mapping in init outside of processing pipeline
       init => "
-        require 'yaml'; $severityMappings = YAML.load(File.read('/etc/malcolm_severity.yaml'))
+        require 'yaml'; $severityMap = YAML.load(File.read('/etc/malcolm_severity.yaml'))
       "
       # to calculate severity:
       # - look up list of severity_tags against severity score mapping (generate hash), ignoring <= 0 or missing (nil) values
@@ -390,8 +412,8 @@ filter {
           tagsarr.push(sevtags)
           sevtags = tagsarr
         end
-        if !sevtags.nil? and (sevtags.length > 0) and ($severityMappings.length > 0) then
-          sevhash = Hash[sevtags.select{|key| ($severityMappings[key].nil? ? 0 : $severityMappings[key]) > 0}.map{|key| [key, $severityMappings[key]]}]
+        if !sevtags.nil? and (sevtags.length > 0) and ($severityMap.length > 0) then
+          sevhash = Hash[sevtags.select{|key| ($severityMap[key].nil? ? 0 : $severityMap[key]) > 0}.map{|key| [key, $severityMap[key]]}]
           sevnum = sevhash.values.sum
           if (sevnum > 0) then
             sevnumNorm = [sevnum, 100].min
