work on idaholab/Malcolm#19, remove dce/rpc from standard ports list as it's using a random high port

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -345,7 +345,7 @@ filter {
                (dstPort = event.get('[dstPort]')) then
               service.each do |srv|
                 if (!$servicePortMap[srv].nil?) and
-                   (service.kind_of?($servicePortMap[srv])) and
+                   ($servicePortMap[srv].kind_of?(Array)) and
                    ($servicePortMap[srv].length > 0) and
                    (!$servicePortMap[srv].include?(dstPort)) then
                   foundOddPort += 1
