work on idaholab/Malcolm#19, added IR to countries of concern

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -57,7 +57,7 @@ filter {
     if ([srcGEO]) or ([dstGEO]) or ([dns][GEO]) {
       ruby {
         id => "ruby_add_field_severity_geo"
-        init => "countriesStr = ENV['QUESTIONABLE_COUNTRY_CODES'] || 'CN,KP,RU,UA' ; $countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
+        init => "countriesStr = ENV['QUESTIONABLE_COUNTRY_CODES'] || 'CN,IR,KP,RU,UA' ; $countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
         code => "
           srcGEOs = event.get('[srcGEO]')
           dstGEOs = event.get('[dstGEO]')
