put user agent into its own higher-level normalized zeek string

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -964,4 +964,19 @@ filter {
     }
   }
 
+  # User agents #######################################################################################################
+  # collect all user agents under the parent [zeek][user_agent] array
+  if ([zeek_gquic][user_agent]) { mutate { id => "mutate_add_field_metadata_useragent_gquic"
+                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_gquic][user_agent]}" } } }
+  if ([zeek_http][user_agent]) {  mutate { id => "mutate_add_field_metadata_useragent_http"
+                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_http][user_agent]}" } } }
+  if ([zeek_sip][user_agent]) {   mutate { id => "mutate_add_field_metadata_useragent_sip"
+                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_sip][user_agent]}" } } }
+  if ([zeek_smtp][user_agent]) {  mutate { id => "mutate_add_field_metadata_useragent_smtp"
+                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_smtp][user_agent]}" } } }
+  if ([@metadata][generic_user_agent]) {
+    mutate { id => "mutate_add_field_zeek_user_agent"
+             add_field => { "[zeek][user_agent]" => "%{[@metadata][generic_user_agent]}" } }
+  }
+
 }
