--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -712,19 +712,8 @@ filter {
 
     # ☐ User agent - Fields to describe a browser user_agent string. - https://www.elastic.co/guide/en/ecs/current/ecs-user_agent.html
     #    - TODO: potentially more parsing could be done for user agent strings (.name, .device.name, .version)
-
-    if ([zeek_gquic][user_agent]) { mutate { id => "mutate_add_field_metadata_http_ecs_useragent_gquic"
-                                             add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_gquic][user_agent]}" } } }
-    if ([zeek_http][user_agent]) {  mutate { id => "mutate_add_field_metadata_http_ecs_useragent_http"
-                                             add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_http][user_agent]}" } } }
-    if ([zeek_sip][user_agent]) {   mutate { id => "mutate_add_field_metadata_http_ecs_useragent_sip"
-                                             add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_sip][user_agent]}" } } }
-    if ([zeek_smtp][user_agent]) {  mutate { id => "mutate_add_field_metadata_http_ecs_useragent_smtp"
-                                             add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_smtp][user_agent]}" } } }
-    if ([@metadata][generic_user_agent]) {
-      mutate { id => "mutate_add_field_ecs_user_agent_original_zeek"
-               add_field => { "[user_agent][original]" => "%{[@metadata][generic_user_agent]}" } }
-    }
+    if ([zeek][user_agent]) { mutate { id => "mutate_merge_field_zeek_original_user_agent"
+                                        merge => { "[user_agent][original]" => "[zeek][user_agent]" } } }
 
     # ☐ Agent - Fields about the monitoring agent. - https://www.elastic.co/guide/en/ecs/current/ecs-agent.html
     #   - agent will be set for logs coming from a sensor (hedgehog)
