--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -101,6 +101,7 @@ zeek.service_version=db:zeek.service_version;kind:termfield;friendly:Service Ver
 zeek.action=db:zeek.action;kind:termfield;friendly:Action;help:Action
 zeek.result=db:zeek.result;kind:termfield;friendly:Result;help:Result
 zeek.user=db:zeek.user;kind:termfield;friendly:User;help:User
+zeek.user_agent=db:zeek.user_agent;kind:termfield;friendly:User Agent;help:User Agent
 zeek.password=db:zeek.password;kind:termfield;friendly:Password;help:Password
 zeek.freq_score_v1=db:zeek_dns.freq_score_v1;kind:termfield;friendly:Freq Score v1;help:Freq Score v1
 zeek.freq_score_v2=db:zeek_dns.freq_score_v2;kind:termfield;friendly:Freq Score v2;help:Freq Score v2
