assign build names to vagrant boxes

--- a/malcolm-iso/vagrant/Vagrantfile
+++ b/malcolm-iso/vagrant/Vagrantfile
@@ -17,6 +17,7 @@ end
 
 Vagrant.configure("2") do |config|
 
+  config.vm.define "vagrant-malcolm-build"
   config.vm.box = "bento/debian-10"
 
   config.vm.network "private_network", type: "dhcp"
