--- a/sensor-iso/vagrant/Vagrantfile
+++ b/sensor-iso/vagrant/Vagrantfile
@@ -17,6 +17,7 @@ end
 
 Vagrant.configure("2") do |config|
 
+  config.vm.define "vagrant-hedgehog-build"
   config.vm.box = "bento/debian-10"
 
   config.vm.network "private_network", type: "dhcp"
