more work on mapping stuff to the ECS fields Arkime uses

--- a/arkime/etc/user_settings.json
+++ b/arkime/etc/user_settings.json
@@ -18,8 +18,8 @@
       "sortColumn": "start",
       "sortDirection": "desc",
       "spiGraph": "protocol",
-      "connSrcField": "srcIp",
-      "connDstField": "dstIp",
+      "connSrcField": "source.ip",
+      "connDstField": "destination.ip",
       "numPackets": "last",
       "theme" : "custom1: #222222,#E2E2E2,#FFFFFF,#00789E,#004A79,#017D73,#092B40,#42b7c5,#2A7580,#ecb30a,#333333,#89ADCC,#6D6D6D,#FFE7E7,#ECFEFF",
       "manualQuery": false
@@ -55,10 +55,10 @@
           "firstPacket",
           "lastPacket",
           "src",
-          "srcPort",
+          "source.port",
           "dst",
-          "dstPort",
-          "totPackets",
+          "destination.port",
+          "network.packets",
           "dbby",
           "tags",
           "info"
