--- a/logstash/pipelines/enrichment/12_type_conv.conf
+++ b/logstash/pipelines/enrichment/12_type_conv.conf
@@ -15,12 +15,12 @@ filter {
       "[dns][opcodeCnt]" => "integer"
       "[dns][qcCnt]" => "integer"
       "[dns][qtCnt]" => "integer"
-      "[dstBytes]" => "integer"
-      "[dstDataBytes]" => "integer"
-      "[dstMacCnt]" => "integer"
+      "[destination][bytes]" => "integer"
+      "[server][bytes]" => "integer"
+      "[destination][mac-cnt]" => "integer"
       "[dstOuiCnt]" => "integer"
-      "[dstPackets]" => "integer"
-      "[dstPort]" => "integer"
+      "[destination][packets]" => "integer"
+      "[destination][port]" => "integer"
       "[email][dstCnt]" => "integer"
       "[email][idCnt]" => "integer"
       "[email][srcCnt]" => "integer"
@@ -50,12 +50,12 @@ filter {
       "[radius][framedIpCnt]" => "integer"
       "[radius][macCnt]" => "integer"
       "[segmentCnt]" => "integer"
-      "[srcBytes]" => "integer"
-      "[srcDataBytes]" => "integer"
-      "[srcMacCnt]" => "integer"
+      "[source][bytes]" => "integer"
+      "[client][bytes]" => "integer"
+      "[source][mac-cnt]" => "integer"
       "[srcOuiCnt]" => "integer"
-      "[srcPackets]" => "integer"
-      "[srcPort]" => "integer"
+      "[source][packets]" => "integer"
+      "[source][port]" => "integer"
       "[ssh][hasshCnt]" => "integer"
       "[ssh][hasshServerCnt]" => "integer"
       "[ssh][keyCnt]" => "integer"
@@ -65,12 +65,12 @@ filter {
       "[tls][ja3Cnt]" => "integer"
       "[tls][ja3sCnt]" => "integer"
       "[tls][versionCnt]" => "integer"
-      "[totBytes]" => "integer"
+      "[network][bytes]" => "integer"
       "[totDataBytes]" => "integer"
-      "[totPackets]" => "integer"
+      "[network][packets]" => "integer"
       "[userCnt]" => "integer"
-      "[vlan]" => "integer"
-      "[vlanCnt]" => "integer"
+      "[network][vlan][id]" => "integer"
+      "[network][vlan][id-cnt]" => "integer"
       "[zeek][freq_score_v1]" => "float"
       "[zeek][freq_score_v2]" => "float"
     }
