--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -56,13 +56,13 @@ filter {
     }
 
     # traffic to/from suspicious country codes
-    if ([srcGEO]) or ([dstGEO]) or ([dns][GEO]) {
+    if ([source][geo][country_iso_code]) or ([destination][geo][country_iso_code]) or ([dns][GEO]) {
       ruby {
         id => "ruby_add_field_severity_geo"
         init => "countriesStr = ENV['QUESTIONABLE_COUNTRY_CODES'] || 'CN,IR,KP,RU,UA' ; $countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
         code => "
-          srcGEOs = event.get('[srcGEO]')
-          dstGEOs = event.get('[dstGEO]')
+          srcGEOs = event.get('[source][geo][country_iso_code]')
+          dstGEOs = event.get('[destination][geo][country_iso_code]')
           dnsGEOs = event.get('[dns][GEO]')
           allGEOs = [srcGEOs.nil? ? [] : (srcGEOs.kind_of?(Array) ? srcGEOs : [srcGEOs]),
                      dstGEOs.nil? ? [] : (dstGEOs.kind_of?(Array) ? dstGEOs : [dstGEOs]),
@@ -270,13 +270,13 @@ filter {
     }
 
     # check for large connection size
-    if ([totDataBytes]) or ([totBytes]) {
+    if ([totDataBytes]) or ([network][bytes]) {
       ruby {
         id => "ruby_add_field_severity_total_bytes"
         init => "mbSeverityThreshold = ENV['TOTAL_MEGABYTES_SEVERITY_THRESHOLD'] || '1000' ; $bytesSeverityThreshold = Integer(mbSeverityThreshold) * 1000000"
         code => "
           totDataBytes = event.get('[totDataBytes]')
-          totBytes = event.get('[totBytes]')
+          totBytes = event.get('[network][bytes]')
           highBytes = [totDataBytes.nil? ? 0 : Integer(totDataBytes),
                        totBytes.nil? ? 0 : Integer(totBytes)].max
           if ($bytesSeverityThreshold > 0) and (highBytes >= $bytesSeverityThreshold) then
@@ -364,7 +364,7 @@ filter {
               version = newver
             end
             if ($servicePortMap.length > 0) and
-               (dstPort = event.get('[dstPort]')) then
+               (dstPort = event.get('[destination][port]')) then
               service.each do |srv|
                 if (!$servicePortMap[srv].nil?) and
                    ($servicePortMap[srv].kind_of?(Array)) and
