--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -222,7 +222,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_conn"
-        init => "$zeek_conn_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'service', 'duration', 'orig_bytes', 'resp_bytes', 'conn_state', 'local_orig', 'local_resp', 'missed_bytes', 'history', 'orig_pkts', 'orig_ip_bytes', 'resp_pkts', 'resp_ip_bytes', 'tunnel_parents', 'vlan', 'inner_vlan', 'orig_l2_addr', 'resp_l2_addr', 'community_id' ]"
+        init => "$zeek_conn_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'service', 'duration', 'orig_bytes', 'resp_bytes', 'conn_state', 'local_orig', 'local_resp', 'missed_bytes', 'history', 'orig_pkts', 'orig_ip_bytes', 'resp_pkts', 'resp_ip_bytes', 'tunnel_parents', 'network.vlan.id', 'inner_vlan', 'orig_l2_addr', 'resp_l2_addr', 'community_id' ]"
         code => "event.set('[zeek_cols]', $zeek_conn_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -259,27 +259,27 @@ filter {
 
     if ([zeek_cols][orig_ip_bytes]) and ([zeek_cols][orig_ip_bytes] != '-') and ([zeek_cols][orig_ip_bytes] != '(empty)') and ([zeek_cols][orig_ip_bytes] != '') {
       mutate { id => "mutate_add_field_zeek_srcBytes"
-               add_field => { "[srcBytes]" => "%{[zeek_cols][orig_ip_bytes]}" } }
+               add_field => { "[source][bytes]" => "%{[zeek_cols][orig_ip_bytes]}" } }
     }
     if ([zeek_cols][resp_ip_bytes]) and ([zeek_cols][resp_ip_bytes] != '-') and ([zeek_cols][resp_ip_bytes] != '(empty)') and ([zeek_cols][resp_ip_bytes] != '') {
       mutate { id => "mutate_add_field_zeek_dstBytes"
-               add_field => { "[dstBytes]" => "%{[zeek_cols][resp_ip_bytes]}" } }
+               add_field => { "[destination][bytes]" => "%{[zeek_cols][resp_ip_bytes]}" } }
     }
     if ([zeek_cols][orig_pkts]) and ([zeek_cols][orig_pkts] != '-') and ([zeek_cols][orig_pkts] != '(empty)') and ([zeek_cols][orig_pkts] != '') {
       mutate { id => "mutate_add_field_zeek_srcPackets"
-               add_field => { "[srcPackets]" => "%{[zeek_cols][orig_pkts]}" } }
+               add_field => { "[source][packets]" => "%{[zeek_cols][orig_pkts]}" } }
     }
     if ([zeek_cols][orig_bytes]) and ([zeek_cols][orig_bytes] != '-') and ([zeek_cols][orig_bytes] != '(empty)') and ([zeek_cols][orig_bytes] != '') {
       mutate { id => "mutate_add_field_zeek_srcDataBytes"
-               add_field => { "[srcDataBytes]" => "%{[zeek_cols][orig_bytes]}" } }
+               add_field => { "[client][bytes]" => "%{[zeek_cols][orig_bytes]}" } }
     }
     if ([zeek_cols][resp_pkts]) and ([zeek_cols][resp_pkts] != '-') and ([zeek_cols][resp_pkts] != '(empty)') and ([zeek_cols][resp_pkts] != '') {
       mutate { id => "mutate_add_field_zeek_dstPackets"
-               add_field => { "[dstPackets]" => "%{[zeek_cols][resp_pkts]}" } }
+               add_field => { "[destination][packets]" => "%{[zeek_cols][resp_pkts]}" } }
     }
     if ([zeek_cols][resp_bytes]) and ([zeek_cols][resp_bytes] != '-') and ([zeek_cols][resp_bytes] != '(empty)') and ([zeek_cols][resp_bytes] != '') {
       mutate { id => "mutate_add_field_zeek_dstDataBytes"
-               add_field => { "[dstDataBytes]" => "%{[zeek_cols][resp_bytes]}" } }
+               add_field => { "[server][bytes]" => "%{[zeek_cols][resp_bytes]}" } }
     }
     if ([zeek_cols][tunnel_parents]) and ([zeek_cols][tunnel_parents] != '(empty)') and ([zeek_cols][tunnel_parents] != '-') and ([zeek_cols][tunnel_parents] != '') {
       mutate { id => "mutate_split_zeek_tunnel_parents"
@@ -1464,12 +1464,12 @@ filter {
 
     if ([zeek_cols][tx_hosts] and [zeek_cols][tx_hosts][0]) {
       mutate { id => "mutate_add_field_zeek_tx_hosts"
-               add_field => { "[srcIp]" => "%{[zeek_cols][tx_hosts][0]}" } }
+               add_field => { "[source][ip]" => "%{[zeek_cols][tx_hosts][0]}" } }
     }
 
     if ([zeek_cols][rx_hosts] and [zeek_cols][rx_hosts][0]) {
       mutate { id => "mutate_add_field_zeek_rx_hosts"
-               add_field => { "[dstIp]" => "%{[zeek_cols][rx_hosts][0]}" } }
+               add_field => { "[destination][ip]" => "%{[zeek_cols][rx_hosts][0]}" } }
     }
 
   } else if ([source] == "ftp") {
@@ -3526,30 +3526,30 @@ filter {
   }
 
   if ([zeek][orig_h]) { mutate { id => "mutate_add_field_zeek_srcIp"
-                                 add_field => { "[srcIp]"   => "%{[zeek][orig_h]}" } } }
+                                 add_field => { "[source][ip]"   => "%{[zeek][orig_h]}" } } }
   if ([zeek][orig_p]) { mutate { id => "mutate_add_field_zeek_srcPort"
-                                 add_field => { "[srcPort]" => "%{[zeek][orig_p]}" } } }
+                                 add_field => { "[source][port]" => "%{[zeek][orig_p]}" } } }
   if ([zeek][resp_h]) { mutate { id => "mutate_add_field_zeek_dstIp"
-                                 add_field => { "[dstIp]"   => "%{[zeek][resp_h]}" } } }
+                                 add_field => { "[destination][ip]"   => "%{[zeek][resp_h]}" } } }
   if ([zeek][resp_p]) { mutate { id => "mutate_add_field_zeek_dstPort"
-                                 add_field => { "[dstPort]" => "%{[zeek][resp_p]}" } } }
+                                 add_field => { "[destination][port]" => "%{[zeek][resp_p]}" } } }
   if ([zeek][community_id]) { mutate { id => "mutate_add_field_zeek_communityId"
-                                       add_field => { "[communityId]" => "%{[zeek][community_id]}" } } }
+                                       add_field => { "[network][community_id]" => "%{[zeek][community_id]}" } } }
 
   if ([zeek][orig_l2_addr]) {
-    # copy orig_l2_addr into srcMac array (with a count of 1)
+    # copy orig_l2_addr into source.mac array (with a count of 1)
     mutate { id => "mutate_merge_field_zeek_srcMac"
-             merge => { "[srcMac]" => "[zeek][orig_l2_addr]" } }
+             merge => { "[source][mac]" => "[zeek][orig_l2_addr]" } }
     mutate { id => "mutate_add_field_zeek_srcMacCnt"
-             add_field => { "[srcMacCnt]" => "1" } }
+             add_field => { "[source][mac-cnt]" => "1" } }
   }
 
   if ([zeek][resp_l2_addr]) {
-    # copy resp_l2_addr into dstMac array (with a count of 1)
+    # copy resp_l2_addr into destination.mac array (with a count of 1)
     mutate { id => "mutate_merge_field_zeek_dstMac"
-             merge => { "[dstMac]" => "[zeek][resp_l2_addr]" } }
+             merge => { "[destination][mac]" => "[zeek][resp_l2_addr]" } }
     mutate { id => "mutate_add_field_zeek_dstMacCnt"
-             add_field => { "[dstMacCnt]" => "1" } }
+             add_field => { "[destination][mac-cnt]" => "1" } }
   }
 
   if ([zeek][uid]) {
@@ -3678,27 +3678,27 @@ filter {
     mutate { id => "mutate_split_zeek_conn_tunnel_parents"
              split => { "[zeek_conn][tunnel_parents]" => "," } }
 
-    if ([zeek_conn][vlan] or [zeek_conn][vlan]) {
+    if ([zeek_conn][vlan] or [zeek_conn][inner_vlan]) {
       if ([zeek_conn][vlan]) {
         mutate { id => "mutate_merge_zeek_conn_vlan"
-                 merge => { "[vlan]" => "[zeek_conn][vlan]" } }
+                 merge => { "[network][vlan][id]" => "[zeek_conn][vlan]" } }
       }
       if ([zeek_conn][inner_vlan]) {
         mutate { id => "mutate_merge_zeek_conn_inner_vlan"
-                 merge => { "[vlan]" => "[zeek_conn][inner_vlan]" } }
+                 merge => { "[network][vlan][id]" => "[zeek_conn][inner_vlan]" } }
       }
       ruby {
         id => "ruby_zeek_conn_vlanCnt"
-        code => "event.set('[vlanCnt]', event.get('[vlan]').length)"
+        code => "event.set('[network][vlan][id-cnt]', event.get('[network][vlan][id]').length)"
       }
     }
 
     # aggregate total bytes and packets
     ruby {
       id => "ruby_zeek_bytes_and_packets_calc"
-      code => "event.set('[totDataBytes]', event.get('[srcDataBytes]').to_i + event.get('[dstDataBytes]').to_i)
-               event.set('[totBytes]', event.get('[srcBytes]').to_i + event.get('[dstBytes]').to_i)
-               event.set('[totPackets]', event.get('[srcPackets]').to_i + event.get('[dstPackets]').to_i)"
+      code => "event.set('[totDataBytes]', event.get('[client][bytes]').to_i + event.get('[server][bytes]').to_i)
+               event.set('[network][bytes]', event.get('[source][bytes]').to_i + event.get('[destination][bytes]').to_i)
+               event.set('[network][packets]', event.get('[source][packets]').to_i + event.get('[destination][packets]').to_i)"
     }
 
     if ([zeek_conn][history]) {
@@ -3876,7 +3876,7 @@ filter {
     if ([zeek_files][total_bytes]) {
       ruby {
         id => "ruby_zeek_files_totBytes"
-        code => "event.set('[totBytes]', event.get('[zeek_files][total_bytes]').to_i)"
+        code => "event.set('[network][bytes]', event.get('[zeek_files][total_bytes]').to_i)"
       }
     }
     if ([zeek_files][seen_bytes]) {
@@ -4054,6 +4054,11 @@ filter {
       mutate { id => "mutate_add_field_zeek_http_post_password_plain"
                add_field =>  { "[zeek][password]" => "%{[zeek_http][post_password_plain]}" } }
     }
+
+    if ([zeek_http][response_body_len]) { mutate { id => "mutate_add_field_zeek_http_server_bytes"
+                                                   add_field => { "[server][bytes]" => "%{[zeek_http][response_body_len]}" } } }
+    if ([zeek_http][request_body_len]) { mutate { id => "mutate_add_field_zeek_http_client_bytes"
+                                                  add_field => { "[client][bytes]" => "%{[zeek_http][request_body_len]}" } } }
 
     ruby {
       id => "ruby_zeek_http_totDataBytes"
@@ -4280,6 +4285,9 @@ filter {
       target => "[zeek_mqtt_publish][payload_dict]"
     }
 
+    if ([zeek_mqtt_publish][payload_len]) { mutate { id => "mutate_add_field_zeek_mqtt_publish_client_len"
+                                                     add_field => { "[client][bytes]" => "%{[zeek_mqtt_publish][payload_len]}" } } }
+
 
   } else if ([source] == "mqtt_subscribe") {
     #############################################################################################################################
@@ -4322,21 +4330,21 @@ filter {
     if ([zeek_notice][category] == "ATTACK") and ([zeek_notice][msg] =~ /(from|against|to)\s+host/) {
       # ATTACK::Discovery - Detected activity from host 192.168.199.133, total attempts 5 within timeframe 5.0 mins
       # but no IP addresses set :(
-      if (![srcIp]) {
+      if (![source][ip]) {
         grok {
           id => "grok_zeek_notice_attack_src_hosts"
-          match => { "[zeek_notice][msg]" => [ "from%{SPACE}host%{SPACE}%{DATA:[srcIp]}%{SPACE}($|[^\d:\.\w-]+)" ] }
+          match => { "[zeek_notice][msg]" => [ "from%{SPACE}host%{SPACE}%{DATA:[source][ip]}%{SPACE}($|[^\d:\.\w-]+)" ] }
         }
-        if ([srcIp]) { mutate { id => "mutate_add_field_zeek_orig_h_attack"
-                                add_field => { "[zeek][orig_h]"   => "%{[srcIp]}" } } }
+        if ([source][ip]) { mutate { id => "mutate_add_field_zeek_orig_h_attack"
+                                add_field => { "[zeek][orig_h]"   => "%{[source][ip]}" } } }
       }
-      if (![dstIp]) {
+      if (![destination][ip]) {
         grok {
           id => "grok_zeek_notice_attack_dst_hosts"
-          match => { "[zeek_notice][msg]" => [ "(against|to)%{SPACE}host%{SPACE}%{DATA:[dstIp]}%{SPACE}($|[^\d:\.\w-]+)" ] }
+          match => { "[zeek_notice][msg]" => [ "(against|to)%{SPACE}host%{SPACE}%{DATA:[destination][ip]}%{SPACE}($|[^\d:\.\w-]+)" ] }
         }
-        if ([dstIp]) { mutate { id => "mutate_add_field_zeek_resp_h_attack"
-                                add_field => { "[zeek][resp_h]"   => "%{[dstIp]}" } } }
+        if ([destination][ip]) { mutate { id => "mutate_add_field_zeek_resp_h_attack"
+                                add_field => { "[zeek][resp_h]"   => "%{[destination][ip]}" } } }
       }
     }
 
@@ -4510,6 +4518,11 @@ filter {
     mutate { id => "mutate_split_zeek_sip_response_path"
              split => { "[zeek_sip][response_path]" => "," } }
 
+    if ([zeek_sip][request_body_len]) { mutate { id => "mutate_add_field_zeek_sip_client_bytes"
+                                                 add_field => { "[client][bytes]" => "%{[zeek_sip][request_body_len]}" } } }
+
+    if ([zeek_sip][response_body_len]) { mutate { id => "mutate_add_field_zeek_sip_server_bytes"
+                                                  add_field => { "[server][bytes]" => "%{[zeek_sip][response_body_len]}" } } }
 
   } else if ([source] == "smb_cmd") or ([source] == "smb_files") {
     #############################################################################################################################
