--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -136,6 +136,7 @@ services:
     environment:
       << : *process-variables
       logger.level : 'WARN'
+      compatibility.override_main_response_version: 'true'
       bootstrap.memory_lock : 'true'
       OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
       VIRTUAL_HOST : 'es.malcolm.local'
@@ -193,7 +194,7 @@ services:
       retries: 3
       start_period: 30s
   kibana:
-    image: malcolmnetsec/kibana-od:3.4.0
+    image: malcolmnetsec/opensearch-dashboards:3.4.0
     restart: "no"
     stdin_open: false
     tty: true
